--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             </div>
         </h3>
 
-        <div class="feature-blocks-container">
+        <div class="feature-blocks-container flex-center">
             <div class="block">  
                 <h2>Why</h2>
                 <h2>Choose</h2>
@@ -409,33 +409,40 @@
                 </div><div class="heading-left">Our Projects</div>
             </h3>
         </div>
-    
-        <div class="project-card">
+
+        <div class="carousel-container">
+            <button class="arrow prev-arrow"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M9.02495 12C9.02495 11.8667 9.04995 11.7377 9.09995 11.613C9.14995 11.4877 9.21662 11.3834 9.29995 11.3L13.9 6.70005C14.0833 6.51672 14.3166 6.42505 14.6 6.42505C14.8833 6.42505 15.1166 6.51672 15.3 6.70005C15.4833 6.88338 15.575 7.11672 15.575 7.40005C15.575 7.68338 15.4833 7.91672 15.3 8.10005L11.4 12L15.3 15.9C15.4833 16.0834 15.575 16.3167 15.575 16.6C15.575 16.8834 15.4833 17.1167 15.3 17.3C15.1166 17.4834 14.8833 17.575 14.6 17.575C14.3166 17.575 14.0833 17.4834 13.9 17.3L9.29995 12.7C9.19995 12.6 9.12928 12.4917 9.08795 12.375C9.04595 12.2584 9.02495 12.1334 9.02495 12Z" fill="black"/>
+                </svg>
+                </button>
+
+            <div class="project-card">
             <div class="project-image-wrapper">
                 <img src="./images/building.png" alt="Building exterior" class="project-image">
             </div>
-
             <div class="project-content">
                 <div class="project-title">
                     <h2>The 360</h2>
                     <h2>Future Of Living Thing</h2>
                 </div>
-
                 <div class="project-tags">
                     <span class="tag">User Interface</span>
                     <span class="tag">Mobile</span>
                     <span class="tag">User Experience</span>
                     <span class="tag">Product Development</span>
                 </div>
-
                 <p class="project-description">
                     Lorem Ipsum Dolor Sit Amet, Consectetuer Adipiscing Elit, Sed Diam Nonummy Nibh Euismod Tincidunt Ut Laoreet Dolore Magna
                 </p>
-
                 <button class="view-details-button btn btn-outlined">View Details</button>
             </div>
-        </div>
+            </div>
 
+            <button class="arrow next-arrow"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M14.975 12C14.975 11.8667 14.95 11.7377 14.9 11.613C14.85 11.4877 14.7834 11.3834 14.7 11.3L10.1 6.70005C9.91672 6.51672 9.68338 6.42505 9.40005 6.42505C9.11671 6.42505 8.88338 6.51672 8.70005 6.70005C8.51672 6.88338 8.42505 7.11672 8.42505 7.40005C8.42505 7.68338 8.51672 7.91672 8.70005 8.10005L12.6 12L8.70005 15.9C8.51672 16.0834 8.42505 16.3167 8.42505 16.6C8.42505 16.8834 8.51672 17.1167 8.70005 17.3C8.88338 17.4834 9.11672 17.575 9.40005 17.575C9.68338 17.575 9.91672 17.4834 10.1 17.3L14.7 12.7C14.8 12.6 14.8707 12.4917 14.912 12.375C14.954 12.2584 14.975 12.1334 14.975 12Z" fill="black"/>
+                </svg>
+                </button>
+        </div>
             
     </section>
 
