--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="header-left">
             <h1>CodeLogi<span>cx</span></h1>
             <h2>Product Engineering</h2>
-            <div class="flex-between btn-wraper"><button class="btn btn-primery big">Get Started</button> <h2>COMPANY</h2></div>
+            <div class="flex btn-wraper"><button class="btn btn-primery big">Get Started</button> <h2>Company</h2></div>
         </div>
 
         <div class="header-right flex-center">
@@ -119,7 +119,7 @@
                 </div>
                 <div class="accordion-products">
                     <div class="product-heading flex-between">
-                        <h5>Product development</h5>
+                        <h5>Project management</h5>
                         <svg class="plus" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M11 19V13H5V11H11V5H13V11H19V13H13V19H11Z" fill="#265169"/>
                         </svg>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="accordion-products">
                     <div class="product-heading flex-between">
-                        <h5>Product development</h5>
+                        <h5>Startup consulting</h5>
                         <svg class="plus" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M11 19V13H5V11H11V5H13V11H19V13H13V19H11Z" fill="#265169"/>
                         </svg>
@@ -139,7 +139,7 @@
                 </div>
                 <div class="accordion-products">
                     <div class="product-heading flex-between">
-                        <h5>Product development</h5>
+                        <h5>Technology consulting</h5>
                         <svg class="plus" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M11 19V13H5V11H11V5H13V11H19V13H13V19H11Z" fill="#265169"/>
                         </svg>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="accordion-products">
                     <div class="product-heading flex-between">
-                        <h5>Product development</h5>
+                        <h5>Application Scaling</h5>
                         <svg class="plus" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M11 19V13H5V11H11V5H13V11H19V13H13V19H11Z" fill="#265169"/>
                         </svg>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="accordion-products">
                     <div class="product-heading flex-between">
-                        <h5>Product development</h5>
+                        <h5>Cloud infrastructure</h5>
                         <svg class="plus" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M11 19V13H5V11H11V5H13V11H19V13H13V19H11Z" fill="#265169"/>
                         </svg>
@@ -169,7 +169,7 @@
                 </div>
                 <div class="accordion-products">
                     <div class="product-heading flex-between">
-                        <h5>Product development</h5>
+                        <h5>UI/UX Development</h5>
                         <svg class="plus" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M11 19V13H5V11H11V5H13V11H19V13H13V19H11Z" fill="#265169"/>
                         </svg>
@@ -179,7 +179,7 @@
                 </div>
                 <div class="accordion-products">
                     <div class="product-heading flex-between">
-                        <h5>Product development</h5>
+                        <h5>Development Services</h5>
                         <svg class="plus" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M11 19V13H5V11H11V5H13V11H19V13H13V19H11Z" fill="#265169"/>
                         </svg>
@@ -189,17 +189,7 @@
                 </div>
                 <div class="accordion-products">
                     <div class="product-heading flex-between">
-                        <h5>Product development</h5>
-                        <svg class="plus" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M11 19V13H5V11H11V5H13V11H19V13H13V19H11Z" fill="#265169"/>
-                        </svg>
-                    </div>
-                    <p class="hidden product-description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad</p>
-                    <div class="ver-line"></div>
-                </div>
-                <div class="accordion-products">
-                    <div class="product-heading flex-between">
-                        <h5>Product development</h5>
+                        <h5>Quality engineering</h5>
                         <svg class="plus" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M11 19V13H5V11H11V5H13V11H19V13H13V19H11Z" fill="#265169"/>
                         </svg>
@@ -256,6 +246,8 @@
                 <div class="icon-line"></div>
                 <p class="icon-box-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
+
+            <div class="pipe"></div>
 
             <div class="icon-box-wrapper b">
                 <h2 class="icon-box-num">02</h2>
